--- a/app/src/main/res/layout/content_item.xml
+++ b/app/src/main/res/layout/content_item.xml
@@ -3,7 +3,4 @@
           android:layout_width="match_parent"
           android:layout_height="100dp"
           android:gravity="center"
-          android:textSize="42sp"
-    >
-
-</TextView>
+          android:textSize="32sp"/>
