(смена цвета по клику, выделение последних поменяных эл-в местами)

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,13 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_random_columns"
+        android:title="@string/action_random_columns"
+        android:orderInCategory="99"
+        app:showAsAction="ifRoom"
+        />
+
+    <item
         android:id="@+id/action_two_columns"
         android:title="@string/action_two_columns"
         android:orderInCategory="100"
